LPD comms ready for UR
AS-4365 AS-4255 AS-4253

--- a/app/views/final-comments/v1/lpd/check-your-answers.html
+++ b/app/views/final-comments/v1/lpd/check-your-answers.html
@@ -45,7 +45,7 @@
       </dl>
 
       <p class="govuk-body govuk-!-margin-bottom-9">
-        Your deadline to submit any further final comments is Monday 4 January 2022.
+        Your deadline to submit any further final comments is {{ 14 | daysInFuture }}.
       <p>
 
       {{ govukButton({
