--- a/app/views/index.html
+++ b/app/views/index.html
@@ -881,15 +881,15 @@
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     {{ govukTag({
-                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                      text: "WIP"
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       LPD communications - Version 1
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
-                        <a href="/lpd-comms/v1/inbox-prompt-for-comments" title="">Inbox - Final comments prompt</a>
+                        <a href="/lpd-comms/v1/inbox-started-refusal" title="">Inbox - Start email</a>
                       </li>
                     </ul>
                     <!--details class="govuk-details" data-module="govuk-details">
@@ -907,12 +907,15 @@
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (1)
+                          Jira Tickets (4)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4253" target="_blank">AS-4253 Submission confirmation email (GovNotify) - LPD</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4255" target="_blank">AS-4255 LPD Statement submission confirmation email (GovNotify)</a></li>
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4363" target="_blank">AS-4363 LPD notification email: IP comments / final comments prompt</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4365" target="_blank">AS-4365 Small content amends to final comments following UR</a></li>
                         </ul>
                       </div>
                     </details>
