--- a/app/views/lpd-comms/v1/comments-submitted.html
+++ b/app/views/lpd-comms/v1/comments-submitted.html
@@ -17,7 +17,7 @@
     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
     <h1 class="govuk-heading-m">
-      14 Fox Lane, Upper Brushton, LA12 6UX - review these comments from interested parties
+      We've received your final comments
     </h1>
 
     <p class="govuk-body">
@@ -32,42 +32,38 @@
       <div class="govuk-grid-column-two-thirds">
 
         <p class="govuk-body">
-          Appeal site: 14 Fox Lane, Upper Brushton, LA12 6UX<br>
-          Appeal reference: 1345264
-        </p>
-        <br>
-
-        <p class="govuk-body">
           Dear City of Bradford Metropolitan District Council
         </p>
         <p class="govuk-body">
-          We've received comments from interested parties for the appeal against the refusal of planning application 1345264.
+          We've received your final comments for appeal 1345264. They're now available for the Inspector to review when considering the appeal.
         </p>
         <p class="govuk-body">
-          The comments are attached for you to review.
+          Site address: 14 Fox Lane, Upper Brushton, LA12 6UX<br>
+          Application reference: 21/05058/FUL
         </p>
 
         <h2 class="govuk-heading-m">
-          What you can do
+          File submitted:
         </h2>
         <p class="govuk-body">
-          You can submit final comments in response to any issues that the interested parties have raised. You cannot introduce any new evidence or arguments in your final comments.
+          final-comments-f1234567.pdf
         </p>
         <p class="govuk-body">
-          Submit your final comments at: <a href="/final-comments/v1/lpd">https://planninginspectorate.gov.uk/final-comments-f1234567</a>
+          You can download a copy of the file at: <a href="javascripot:preventDefault();">https://docs.appeals.planninginspectorate.gov.uk/2105058FUL/final-comments-f1234567.pdf</a>
         </p>
+
+        <h2 class="govuk-heading-m">
+          Submitted on:
+        </h2>
         <p class="govuk-body">
-          Your deadline is {{ 14 | daysInFuture }}.
-        </p>
-        <p class="govuk-body">
-          Submitting final comments is optional.
+          {{ 0 | daysAgo }} at {{ 2 | minutesAgo }}
         </p>
 
         <h2 class="govuk-heading-m">
           What happens next
         </h2>
         <p class="govuk-body">
-          If you submit final comments, we'll forward them to the appellant for their information.
+          We'll review your comments and forward them to the appellant for their information.
         </p>
         <p class="govuk-body">
           Once the deadline for final comments has passed, the Inspector will begin considering the appeal.
