--- a/app/views/lpd-comms/v1/inbox-comments-submitted.html
+++ b/app/views/lpd-comms/v1/inbox-comments-submitted.html
@@ -23,9 +23,14 @@
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row email-unread">
-          <td class="govuk-table__cell"><a href="prompt-for-comments">Appeal a planning decision</a></td>
-          <td class="govuk-table__cell"><a href="prompt-for-comments">14 Fox Lane, Upper Brushton, LA12 6UX - review the&hellip;</a></td>
-          <td class="govuk-table__cell"><a href="prompt-for-comments">{{ 2 | minutesAgo }}</a></td>
+          <td class="govuk-table__cell"><a href="comments-submitted">Appeal a planning decision</a></td>
+          <td class="govuk-table__cell"><a href="comments-submitted">We've received your final comments</a></td>
+          <td class="govuk-table__cell"><a href="comments-submitted">{{ 2 | minutesAgo }}</a></td>
+        </tr>
+        <tr class="govuk-table__row email-read">
+          <td class="govuk-table__cell">Appeal a planning decision</td>
+          <td class="govuk-table__cell">14 Fox Lane, Upper Brushton, LA12 6UX - review the&hellip;</td>
+          <td class="govuk-table__cell">{{ 20 | minutesAgo }}</td>
         </tr>
         <tr class="govuk-table__row email-read">
           <td class="govuk-table__cell">Appeal a planning decision</td>
