--- a/app/views/lpd-comms/v1/inbox-started-refusal.html
+++ b/app/views/lpd-comms/v1/inbox-started-refusal.html
@@ -22,16 +22,6 @@
         </tr>
       </thead>
       <tbody class="govuk-table__body">
-        <tr class="govuk-table__row email-unread">
-          <td class="govuk-table__cell"><a href="prompt-for-comments">Appeal a planning decision</a></td>
-          <td class="govuk-table__cell"><a href="prompt-for-comments">14 Fox Lane, Upper Brushton, LA12 6UX - review the&hellip;</a></td>
-          <td class="govuk-table__cell"><a href="prompt-for-comments">{{ 2 | minutesAgo }}</a></td>
-        </tr>
-        <tr class="govuk-table__row email-read">
-          <td class="govuk-table__cell">Appeal a planning decision</td>
-          <td class="govuk-table__cell">We've received your statement of case</td>
-          <td class="govuk-table__cell">{{ 1 | emailDaysAgo }}</td>
-        </tr>
         <tr class="govuk-table__row email-read">
           <td class="govuk-table__cell">Amazon.co.uk</td>
           <td class="govuk-table__cell">Confirmation of your order 015-6667394-025648&hellip;</td>
@@ -52,10 +42,10 @@
           <td class="govuk-table__cell">Enjoy 2 free audiobooks with your 30-day trial</td>
           <td class="govuk-table__cell">{{ 15 | emailDaysAgo }}</td>
         </tr>
-        <tr class="govuk-table__row email-read">
-          <td class="govuk-table__cell">Appeal a planning decision</td>
-          <td class="govuk-table__cell">14 Fox Lane, Upper Brushton, LA12 6UX - full appea&hellip;</td>
-          <td class="govuk-table__cell">{{ 32 | emailDaysAgo }}</td>
+        <tr class="govuk-table__row email-unread">
+          <td class="govuk-table__cell"><a href="started-refusal">Appeal a planning decision</a></td>
+          <td class="govuk-table__cell"><a href="started-refusal">14 Fox Lane, Upper Brushton, LA12 6UX - full appea&hellip;</a></td>
+          <td class="govuk-table__cell"><a href="started-refusal">{{ 32 | emailDaysAgo }}</a></td>
         </tr>
       </tbody>
     </table>
