--- a/app/views/lpd-comms/v1/inbox-statement-submitted.html
+++ b/app/views/lpd-comms/v1/inbox-statement-submitted.html
@@ -23,14 +23,9 @@
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row email-unread">
-          <td class="govuk-table__cell"><a href="prompt-for-comments">Appeal a planning decision</a></td>
-          <td class="govuk-table__cell"><a href="prompt-for-comments">14 Fox Lane, Upper Brushton, LA12 6UX - review the&hellip;</a></td>
-          <td class="govuk-table__cell"><a href="prompt-for-comments">{{ 2 | minutesAgo }}</a></td>
-        </tr>
-        <tr class="govuk-table__row email-read">
-          <td class="govuk-table__cell">Appeal a planning decision</td>
-          <td class="govuk-table__cell">We've received your statement of case</td>
-          <td class="govuk-table__cell">{{ 1 | emailDaysAgo }}</td>
+          <td class="govuk-table__cell"><a href="statement-submitted">Appeal a planning decision</a></td>
+          <td class="govuk-table__cell"><a href="statement-submitted">We've received your statement of case</a></td>
+          <td class="govuk-table__cell"><a href="statement-submitted">{{ 2 | minutesAgo }}</a></td>
         </tr>
         <tr class="govuk-table__row email-read">
           <td class="govuk-table__cell">Amazon.co.uk</td>
