--- a/app/views/statement-of-case/v1/confirmation.html
+++ b/app/views/statement-of-case/v1/confirmation.html
@@ -34,6 +34,12 @@
         We'll review your statement and forward it to the appellant.
       </p>
 
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+      <p class="govuk-body">
+        <a href="/lpd-comms/v1/inbox-statement-submitted">Go to your inbox</a>
+      </p>
+
     </div>
     <div class="govuk-grid-column-one-third">
     </div>
