Fixes to start email for UR

--- a/app/views/lpd-comms/v1/inbox-started-refusal.html
+++ b/app/views/lpd-comms/v1/inbox-started-refusal.html
@@ -22,6 +22,11 @@
         </tr>
       </thead>
       <tbody class="govuk-table__body">
+        <tr class="govuk-table__row email-unread">
+          <td class="govuk-table__cell"><a href="started-refusal">Appeal a planning decision</a></td>
+          <td class="govuk-table__cell"><a href="started-refusal">14 Fox Lane, Upper Brushton, LA12 6UX - full appea&hellip;</a></td>
+          <td class="govuk-table__cell"><a href="started-refusal">{{ 20 | minutesAgo }}</a></td>
+        </tr>
         <tr class="govuk-table__row email-read">
           <td class="govuk-table__cell">Amazon.co.uk</td>
           <td class="govuk-table__cell">Confirmation of your order 015-6667394-025648&hellip;</td>
@@ -41,11 +46,6 @@
           <td class="govuk-table__cell">Audible.co.uk</td>
           <td class="govuk-table__cell">Enjoy 2 free audiobooks with your 30-day trial</td>
           <td class="govuk-table__cell">{{ 15 | emailDaysAgo }}</td>
-        </tr>
-        <tr class="govuk-table__row email-unread">
-          <td class="govuk-table__cell"><a href="started-refusal">Appeal a planning decision</a></td>
-          <td class="govuk-table__cell"><a href="started-refusal">14 Fox Lane, Upper Brushton, LA12 6UX - full appea&hellip;</a></td>
-          <td class="govuk-table__cell"><a href="started-refusal">{{ 32 | emailDaysAgo }}</a></td>
         </tr>
       </tbody>
     </table>
