--- a/app/views/lpd-comms/v1/started-refusal.html
+++ b/app/views/lpd-comms/v1/started-refusal.html
@@ -35,12 +35,13 @@
           Appeal site: 14 Fox Lane, Upper Brushton, LA12 6UX<br>
           Planning appeal reference: 1345264
         </p>
+        <br>
 
         <p class="govuk-body">
           Dear City of Bradford Metropolitan District Council
         </p>
 
-        <p class="govuk-body">We've started a full appeal against the refusal of planning application <strong>21/05058/FUL</strong>.</p>
+        <p class="govuk-body">We've started a full appeal against the refusal of planning application 21/05058/FUL.</p>
 
         <p class="govuk-body">We'll decide the appeal by written representations.</p>
 
@@ -48,10 +49,10 @@
           Appeal timeline
         </h2>
         <p class="govuk-body">
-          Appeal start date:  {{ 30 | daysAgo }}<br>
-          Questionnaire deadline:  {{ 23 | daysAgo }}<br>
-          Statement of case deadline:  {{ 5 | daysInFuture }}<br>
-          Final comments deadline: {{ 19 | daysInFuture }}
+          Appeal start date:  {{ 0 | daysInFuture }}<br>
+          Questionnaire deadline:  {{ 7 | daysInFuture }}<br>
+          Statement of case deadline:  {{ 35 | daysInFuture }}<br>
+          Final comments deadline: {{ 49 | daysInFuture }}
         </p>
 
         <h2 class="govuk-heading-m">
@@ -62,25 +63,25 @@
           ChrisSmith@planninginspectorate.gov.uk
         </p>
 
-        <h2 class="govuk-heading-m">What you need to do</h2>
-
-        <h3 class="govuk-heading-s">Notify interested parties about the appeal</h3>
-        <p class="govuk-body">You must do this as soon as possible. Interested parties have until {{ 5 | daysInFuture }} to submit their comments.</p>
-        <p class="govuk-body">They should email their comments to ChrisSmith@planninginspectorate.gov.uk</a></p>
-
-        <h3 class="govuk-heading-s">Submit your questionnaire</h3>
-        <p class="govuk-body">Your deadline is {{ 23 | daysAgo }}.</p>
+        <h2 class="govuk-heading-m">Submit your questionnaire</h2>
+        <p class="govuk-body">Your deadline is {{ 7 | daysInFuture }}.</p>
         <p class="govuk-body">Complete the questionnaire by following this link: [submit questionnaire]</p>
         <p class="govuk-body">Once you've submitted your questionnaire, you need to email a copy to the appellant at: appellant@email.com</p>
 
-        <h3 class="govuk-heading-s">Submit your statement of case</h3>
-        <p class="govuk-body">Your deadline is {{ 5 | daysInFuture }}.</p>
-        <p class="govuk-body">This is optional. It is your opportunity to respond to arguments in the appellant's appeal statement. You do not need to repeat information that is in the Planning Officer's report.</p>
-        <p class="govuk-body">Submit your statement of case by following this link: [<a href="/statement-of-case/v1/">submit statement of case</a>]</p>
+        <h2 class="govuk-heading-m">Notify interested parties about the appeal</h2>
+        <p class="govuk-body">You must do this as soon as possible using a copy of this template: [<a href="/local-planning-department/v1/householder-appeal-first-notice-template">link to template</a>]</p>
+        <p class="govuk-body">Interested parties have until {{ 35 | daysInFuture }} to submit their comments.</p>
+
+        <h2 class="govuk-heading-m">Submit your statement of case</h2>
+        <p class="govuk-body">This is optional. You do not need to repeat information that is in the Planning Officer's report.</p>
+        <p class="govuk-body">Your deadline is {{ 35 | daysInFuture }}.</p>
+        <p class="govuk-body">Submit your statement by following this link: [<a href="/statement-of-case/v1/">submit statement of case</a>]</p>
 
         <br><br>
         <p class="govuk-body">
-          Thank you,<br>
+          Thank you,
+        </p>
+        <p class="govuk-body">
           The Planning Inspectorate<br>
           CaseOfficers@PlanningInspectorate.gov.uk
         </p>
