minor typos fixes

--- a/app/views/lpd-comms/v1/started-refusal.html
+++ b/app/views/lpd-comms/v1/started-refusal.html
@@ -83,7 +83,7 @@
         </p>
         <p class="govuk-body">
           The Planning Inspectorate<br>
-          CaseOfficers@PlanningInspectorate.gov.uk
+          CaseOfficers@planninginspectorate.gov.uk
         </p>
 
       </div>
