typo fix on BYS v10

--- a/app/views/before-you-start/v10/what-are-you-appealing.html
+++ b/app/views/before-you-start/v10/what-are-you-appealing.html
@@ -1,7 +1,7 @@
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
-  What type of planning application did you make? - Before you start - {{serviceName}} - GOV.UK
+  What type of planning application is your appeal about? - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -33,7 +33,7 @@
           name: "bys-"+version+"-whatareyouappealing",
           fieldset: {
             legend: {
-              text: "What type of planning application did you make?",
+              text: "What type of planning application is your appeal about?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l"
             }
