Fix to upload routing

--- a/app/views/interested-party/v3/comment-upload.html
+++ b/app/views/interested-party/v3/comment-upload.html
@@ -30,7 +30,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- <form action="comment-upload-list" method="post"> -->
-      <form action="" method="post" novalidate>
+      <form action="comment-upload-check" method="post" novalidate>
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
         <h1 class="govuk-heading-l">
