--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,6 +18,7 @@ $govuk-assets-path: '/govuk/assets/';
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
 @import "components/cookie-banner";
+@import "pins/design-system";
 @import "pins/govuk";
 @import "pins/lpaq";
 @import "pins/save-return";
