Small updates, hiding decision link on appeals

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -391,11 +391,11 @@
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
                 {{ govukTag({
-                  classes: "govuk-tag--red govuk-!-margin-bottom-1",
-                  text: "WIP"
+                  classes: "govuk-tag--green govuk-!-margin-bottom-1",
+                  text: "Ready for UR"
                 }) }}
 
-                <span class="govuk-caption-m">Sprint Cote d’Ivoire</span>
+                <span class="govuk-caption-m">Sprint 9 - Cote d’Ivoire</span>
                 <h3 class="govuk-heading-m">
                   Interested party LPD notice template
                 </h3>
@@ -432,11 +432,11 @@
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
                 {{ govukTag({
-                  classes: "govuk-tag--red govuk-!-margin-bottom-1",
-                  text: "WIP"
+                  classes: "govuk-tag--green govuk-!-margin-bottom-1",
+                  text: "Ready for UR"
                 }) }}
 
-                <span class="govuk-caption-m">Sprint Cote d’Ivoire</span>
+                <span class="govuk-caption-m">Sprint 9 - Cote d’Ivoire</span>
                 <h3 class="govuk-heading-m">
                   Interested party journey from LPD notice (version 3)
                 </h3>
@@ -534,11 +534,11 @@
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
                 {{ govukTag({
-                  classes: "govuk-tag--green govuk-!-margin-bottom-1",
-                  text: "Ready for UR"
+                  classes: "govuk-tag--blue govuk-!-margin-bottom-1",
+                  text: "Done"
                 }) }}
 
-                <span class="govuk-caption-m">Sprint Belgium</span>
+                <span class="govuk-caption-m">Sprint 8 - Belgium</span>
                 <h3 class="govuk-heading-m">
                   Interested party journey from LPD notice (version 2)
                 </h3>
@@ -670,7 +670,7 @@
                   text: "Done"
                 }) }}
 
-                <span class="govuk-caption-m">Sprint Austria</span>
+                <span class="govuk-caption-m">Sprint 7 - Austria</span>
                 <h3 class="govuk-heading-m">
                   Interested party journey from LPD notice (version 1)
                 </h3>
