--- a/app/views/interested-party/v3/appeal-details.html
+++ b/app/views/interested-party/v3/appeal-details.html
@@ -153,7 +153,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
+          <div class="govuk-summary-list__row pins-summary-list__row--last">
             <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
               Decision date
             </dt>
@@ -162,7 +162,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row pins-summary-list__row--last">
+          <!-- <div class="govuk-summary-list__row pins-summary-list__row--last">
             <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
               Decision document
             </dt>
@@ -171,7 +171,7 @@
                 See the appeal decision
               </a>
             </dd>
-          </div>
+          </div> -->
 
         {% endif %}
 
