--- a/app/views/interested-party-comments/v1/comment-received.html
+++ b/app/views/interested-party-comments/v1/comment-received.html
@@ -33,21 +33,8 @@
         <h1 class="govuk-panel__title">
           {{ title }}
         </h1>
-
-
-
-        <div class="govuk-panel__body govuk-!-margin-bottom-3">
-          Your comment will be included in the appeal.
-        </div>
-
         <div class="govuk-panel__body">
-          Appeal reference: <strong>
-            {% if data['appealCode'] %}
-              {{ data['appealCode'] }}
-            {% else %}
-              0166327
-            {% endif %}
-            </strong>
+          Your comment will be included in appeal number <strong>1234567</strong>.
         </div>
       </div>
 
@@ -56,20 +43,20 @@
       <h2 class="govuk-heading-m">What happens next</h2>
 
       <p class="govuk-body">
-        Your comments will be shared with the applicant and Bristol City Council.
+        Your comments will be shared with the appellant and Local Planning Department.
       </p>
 
       <p class="govuk-body">
-        The Inspector will review them when determining the appeal.
+        An inspector will review them when determining the appeal.
       </p>
 
       <!-- <p class="govuk-body">
         We will contact you again when a decision is made.
       </p> -->
 
-      <!-- <p class="govuk-body">
+      <p class="govuk-body">
         A decision is expected by 27 May 2022.
-      </p> -->
+      </p>
 
     </section>
 
