--- a/app/views/interested-party/v1/comment-upload.html
+++ b/app/views/interested-party/v1/comment-upload.html
@@ -1,12 +1,9 @@
 {% extends "layout.html" %}
 
-{% set pageref = "###" %}
-{% extends "layout.html" %}
-
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "Upload your comment"  %}
+{% set title = "Upload your comments"  %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -32,7 +29,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="check-answers" method="post">
+      <!-- <form action="comment-upload-list" method="post"> -->
+      <form action="comment-upload-check" method="post" novalidate>
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
         <h1 class="govuk-heading-l">
@@ -40,19 +38,11 @@
         </h1>
 
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-appealstatement">
-            {% if data["appealsub-"+version+"-appealdocuments-appealstatement"] and data["appealsub-"+version+"-appealdocuments-appealstatement"] != "" %}
-              Replace the file
-            {% else %}
-              Drag and drop or choose a file
-            {% endif %}
+          <label class="govuk-label" for="upload-multiple">
+            Drag and drop or choose files
           </label>
-          <input class="govuk-file-upload pins-file-upload" id="appealsub-{{version}}-appealdocuments-appealstatement" name="appealsub-{{version}}-appealdocuments-appealstatement" type="file">
+          <input class="govuk-file-upload pins-file-upload" id="comments-file" name="comments-file" type="file" multiple>
         </div>
-
-        {{ govukInsetText({
-          text: "File size should be no more than 15MB"
-        }) }}
 
         {{ govukDetails({
           summaryText: "Files you can upload",
@@ -61,37 +51,24 @@
               You can upload the following types of file:
             </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>rtf</li>
-              <li>txt</li>
-              <li>doc</li>
-              <li>docx</li>
-              <li>pdf</li>
-
-              <!-- <li>DOC or DOCX</li>
+              <li>RTF</li>
+              <li>TXT</li>
+              <li>DOC</li>
+              <li>DOCX</li>
+              <li>PDF</li>
+              <li>DOC or DOCX</li>
               <li>JPG or JPEG</li>
               <li>PDF</li>
               <li>PNG</li>
-              <li>TIF or TIFF</li> -->
+              <li>TIF or TIFF</li>
             </ul>
+
+            <p>
+              Your file must be smaller than 15MB.
+            </p>
 
           '
         }) }}
-
-        <!-- {{ govukDetails({
-          summaryText: "Help with file formats",
-          html: '
-            <p class="govuk-body">
-              You must upload comments in one of these file formats
-            <p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>rtf</li>
-              <li>txt</li>
-              <li>doc</li>
-              <li>docx</li>
-              <li>pdf</li>
-            </ul>
-          '
-        }) }} -->
 
         {{ govukButton({
           text: "Continue"
