--- a/app/views/interested-party/v1/householder-appeal-first-notice-letter.html
+++ b/app/views/interested-party/v1/householder-appeal-first-notice-letter.html
@@ -11,62 +11,119 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
 {% block content %}
 
+<img src="{{ asset_path }}images/bcc-logo.png" width="150" class="govuk-!-margin-bottom-6" />
+
 <p>
   Bristol City Council Planning Department, Atlas Buildings<br>
   Sedgemore Road, Bristol BS1 6XN
 </p>
 
-<p>
-  <strong>Sam Phipps</strong><br>
+<p class="govuk-!-margin-bottom-9">
+  <strong>[Your name]</strong><br>
   Atlas Buildings<br>
   Sedgemore Road<br>
   Bristol<br>
   BS1 6XN
 </p>
 
+<p class="govuk-body">
+  <strong>Appeal reference</strong><br>
+  0166327
+</p>
 
-<!-- <img src="{{ asset_path }}images/pi-logo.png" width="150"/> -->
+<p class="govuk-body">
+  <strong>Appeal site</strong><br>
+  1 Aubrey House
+  Aubrey Road
+  Bristol BS3 3EX
+</p>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
 
     <!-- <p class="govuk-body">Planning appeal reference: A/1234567</p> -->
-    <p class="govuk-body">Dear Sam Phipps,</p>
+    <p class="govuk-body">Dear [Your name],</p>
     <!-- <p class="govuk-body">We’ve started a full appeal against the refusal of planning application <strong>A/10112454</strong>.</p> -->
 
-    <p class="govuk-body">J. M. Wigstone is appealling our decision to refuse planning application <strong>A/10112454</strong>.</p>
-
-    <!-- <p class="govuk-body">
-      <strong>Applicant name:</strong><br>
-      J. M. Wigstone
-    </p> -->
-
     <p class="govuk-body">
-      <strong>Appeal site:</strong><br>
-      22 Avenue Grove<br>
-      Somerset<br>
-      BS72 7YS
+      J.M. Wigstone is appealing Bristol City Council's decision to refuse planning application A/10112454.
     </p>
 
     <p class="govuk-body">
-      <strong>Appeal reference:</strong><br>
-      0172631
+      Planning appeals are decided by the Planning Inspectorate.
     </p>
 
-    <!-- <p class="govuk-body">This will be decided by written representations.</p> -->
+    <p class="govuk-body">
+      The Planning Inspectorate is an independent, impartial body that decides appeals on planning applications.
+    </p>
+
+    <p class="govuk-body">
+      The Planning Inspectorate makes a decision based on written statements from the applicant, Bristol City Council, and interested parties.
+    </p>
 
     <h2 class="govuk-heading-m">
       What you can do
     </h2>
 
-    <p class="govuk-body">You can comment on the appeal until 11.59pm on 4 May 2022.</p>
+    <h3 class="govuk-heading-s">
+      Comment on the appeal
+    </h3>
 
-    <p class="govuk-body">Submit your comments to the Planning Inspectorate at <strong>https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal/appeal-search</strong></p>
+    <p class="govuk-body">
+      You can comment on the appeal until 11.59pm on 4 May 2022.
+    </p>
+
+    <p class="govuk-body">
+      We’ve already sent your original comments to the Inspector. You do not need to repeat this information again.
+    </p>
+
+    <p class="govuk-body">
+      You can submit any new comments to the Planning Inspectorate at https://www.gov.uk/appeal-planning-decision/comment-on-an-appeal/appeal-search
+    </p>
+
+    <p class="govuk-body">
+      You will need to enter the appeal reference: <strong>0166327</strong>.
+    </p>
+
+    <h3 class="govuk-heading-s">
+      Request a site visit
+    </h3>
+
+    <p class="govuk-body">
+      You can request for the Planning Inspector to view the appeal site from your property. You can request this by emailing enquiries@planninginspectorate.gov.uk
+    </p>
+
+    <h3 class="govuk-heading-s">
+      Withdraw comments
+    </h3>
+
+    <p class="govuk-body">
+      You can withdraw any comments you've made in the past. You can do this by emailing enquiries@planninginspectorate.gov.uk by 11.59pm on 4 May 2022.
+    </p>
+
+    <h3 class="govuk-heading-s">
+      View the appeal details
+    </h3>
+
+    <p class="govuk-body">
+      You can view the appeal details of the planning application at https://www.bristol.gov.uk/planning-and-building-regulations/search-and-track-planning-application
+    </p>
+
+    <h2 class="govuk-heading-m">
+      What happens next
+    </h2>
+
+    <p class="govuk-body">
+      The Planning Inspectorate will look at the evidence from the applicant and the local planning department, conduct a site visit, and make the final decision on the appeal.
+    </p>
+
+    <p class="govuk-body">
+      The Planning Inspectorate will publish the decision online at https://www.bristol.gov.uk/planning-and-building-regulations/search-and-track-planning-applications
+    </p>
 
     <p class="govuk-body">
       Thank you,​<br>
       Bristol City Council Planning Department<br>
-      <!-- <a href="javascript:preventDefault();">caseofficers@planninginspectorate.gov.uk</a> -->
     </p>
 
   </div>
